--- a/.github/webflows/updated-badges.yml
+++ b/.github/webflows/updated-badges.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Badges - Readme
-        uses: amankitsingh/amankitsingh@main
+        uses: amankitsingh/amankitsingh@master
         with:       
           CREDLY_USER: <amankitsingh> # optional, but default will use the same from github
